Additional parameters fix

--- a/Paysera/App.config
+++ b/Paysera/App.config
@@ -7,8 +7,8 @@
     <add key="AcceptUrl" value="http://isidos.com/accept/"/>
     <add key="CancelUrl" value="http://isidos.com/cancel/"/>
     <add key="CallbackUrl" value="http://isidos.lt/callback/"/>
-    <add key="ProjectId" value="64082"/>
-    <add key="SignPassword" value="84793143cb08280d709ba235b51a594b"/>
+    <add key="ProjectId" value=""/>
+    <add key="SignPassword" value=""/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
